--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10, <3.11"
 license = {text="MIT"}
-[tool.poetry.dependencies]
+[dependencies]
 pylint = "^3.3.8"
 pytest = "^8.4.2"
 pytest-cov = "^6.3.0"
